Fix Bug 78563 - AI: Large gap in Fire Fox between "How can I help?" and chat.

--- a/packages/shared/components/chat/components/chat-message-body/ChatMessageBody.module.scss
+++ b/packages/shared/components/chat/components/chat-message-body/ChatMessageBody.module.scss
@@ -44,8 +44,9 @@
   box-sizing: border-box;
 
   &.empty {
-    max-height: fit-content;
+    height: auto;
     flex-grow: 0;
+    max-height: fit-content;
   }
 
   @include mixins.tablet-and-below {
